--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "firebase": "^10.12.2",
+    "mapbox-gl": "^3.4.0",
     "next": "14.2.3",
     "puppeteer": "^22.10.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
