--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "mapbox-gl": "^3.4.0",
     "next": "14.2.3",
+    "next-intl": "^3.15.0",
     "puppeteer": "^22.10.0",
     "react": "^18",
     "react-dom": "^18",
